# liars_bar

./: .env.example  .gitignore  PROJECT_MEMORY.md  README.md  pyproject.toml
config/: experiment.yaml
docs/plans/: 2026-03-18-liars-bar-bootstrap.md  2026-03-18-liars-bar-design.md  2026-03-19-basic-rules-alignment-implementation.md  2026-04-17-null-probe-injection.md  2026-04-17-shapley-sampling-validation.md  2026-04-23-proxy-based-attribution.md  2026-04-23-proxy-quality-diagnosis.md  2026-04-23-task-k-task-l-runners.md  2026-04-24-task-k-server-and-8d-retrain.md  2026-04-24-task-m-llm-drill.md  2026-04-26-task-k-observability-plan.md  2026-04-29-task-m-progress-monitoring.md  2026-05-04-english-only-savi-hardening.md
docs/tmp/: 2026-04-28-project-handoff.md  liars_game_engine_single_loop_flow.md
liars_game_engine/: __init__.py  main.py
liars_game_engine/agents/: __init__.py  action_resolver.py  base_agent.py  factory.py  langchain_agent.py  (+6 more)
logs/: CHANGELOG_DAILY.md  CHANGELOG_DETAILED.md
scripts/: audit_llm_behavior.py  build_savi_alignment_dataset.py  build_savi_alignment_full_dataset.py  recalibrate_alignment_dataset.py  remote_run.sh  run_llm_drill.py  run_task_k_gold_server.sh  run_task_m_drill_server.sh  setup_server_env.sh  start_vllm.sh  sweep_action_match_reward.py  train_savi_alignment.py
tests/: test_action_parser.py  test_audit_llm_behavior.py  test_config_loader.py  test_environment_pipeline.py  test_hicra_preprocessor.py  test_implicit_skill_mapper.py  test_liar_planner.py  test_llm_agent.py  test_llm_drill.py  test_local_backend.py  test_mock_agent_pipeline.py  test_orchestrator_logging.py  test_project_policy_files.py  test_server_scripts.py  test_shapley_analyzer.py  test_sweep_action_match_reward.py  test_task_d_axiomatic_runner.py  test_task_k_backfill_labels.py  test_task_k_phi_distill_runner.py  test_task_k_task_l_runners.py  test_task_m_server_script.py  test_token_alignment.py  test_train_savi_alignment.py
(+854 files in other folders)
