[build-system]
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "liars-game-engine"
version = "0.1.0"
description = "Async Liar's Bar experiment engine for multi-agent LLM research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
train = [
  "transformers>=4.49",
  "peft>=0.14",
  "accelerate>=1.4",
  "trl>=0.15",
]

[tool.setuptools.packages.find]
include = ["liars_game_engine*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
